apps/monitoring/grafana/app/deployment.yaml
# Use deployment instead of helm chart because this copies an existing docker deployment. In future, we can use helm.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: "${APP}"
  labels:
    app: "${APP}"
spec:
  replicas: 1
  strategy:
    type: Recreate  # Don't use RollingUpdate because PVC can only be mounted by one pod at a time
  selector:
    matchLabels:
      app: "${APP}"
  template:
    metadata:
      labels:
        app: "${APP}"
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:13.2.3
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana/
        ports:
          - containerPort: 3000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: "${PV_CLAIM}"
