apps/monitoring/grafana/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-metallb
  namespace: monitoring
  annotations:
    metallb.universe.tf/allow-shared-ip: monitoring-lb
spec:
  selector:
    app: "${APP}"
  ports:
  - name: webui
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: "${LB_MONITORING}"
